--- a/等额本息.md
+++ b/等额本息.md
@@ -1,7 +1,7 @@
 等额本息：借款期限内，每期以相等的金额偿还贷款本息，其中利息逐月递减，本金逐月递增。因为每期的还款额相等，每期利息的计息基数是**剩余贷款本金**，所以在贷款初期每期的还款中，利息计息基数较大，利息较多，剔除利息后，所还的贷款本金就较少，而在贷款末期，随着剩余贷款本金的逐渐减少，末期每期利息也相对减少，所还贷款本金就相对增加。等额本息是住房贷款的两种常见还款方式之一，其贷款计算公式如下：
-$$
-每期偿还金额 = \frac{贷款本金\times月利率\times(1+月利率)^{借款期数}}{(1+月利率)^{借款期数}-1}
-$$
+
+$$每期偿还金额 = \frac{贷款本金\times月利率\times(1+月利率)^{借款期数}}{(1+月利率)^{借款期数}-1}$$
+
 在贷款领域中，一般都是使用年利率展示，然后通过年利率换算月利率，套用贷款计算公式，算出每期偿还金额，举个例子：
 
 > 比如借款120000，分12期，年利率23.9805%，月还款利息 = 剩余应还本金 * 月利率 = 剩余应还本金 * 年利率/12
