--- a/等额本息.md
+++ b/等额本息.md
@@ -12,9 +12,7 @@ $$每期偿还金额 = \frac{贷款本金\times月利率\times(1+月利率)^{借
 
 可以看到，上面的月还款利息直接通过月利率计算，实际是将每个月当做了30天来算出每月还款利息，但很多贷款产品是需要计算每期的占用天数的，以满足法规要求和提高计划的精确性，可以说是按日计息。因此在实际计算每期还款利息的时候使用日利率，月利率则使用日利率按30天换算，具体计算方式如下：
 
-$$每期还款利息 = 剩余应还本金 \times 日利率 \times 每期占用天数$$
-$$月利率 = 日利率 \times 30$$
-$$或者月利率 = 年利率 ÷ 12$$
+$$每期还款利息 = 剩余应还本金 \times 日利率 \times 每期占用天数\\月利率 = 日利率 \times 30\\或者月利率 = 年利率 ÷ 12$$
 
 这种做法也是为了方便计算和表达，在金融行业中比较常见。这样的计算方式还需要注意一些细节。通常，从年利率到日利率的转换是通过除以年份的天数（通常取365天）来完成的，因为一年通常被视为365天。这样的转换是一种近似，而不是准确的数学计算。具体计算方式如下：
 
