--- a/等额本息.md
+++ b/等额本息.md
@@ -1,6 +1,6 @@
 等额本息：借款期限内，每期以相等的金额偿还贷款本息，其中利息逐月递减，本金逐月递增。因为每期的还款额相等，每期利息的计息基数是**剩余贷款本金**，所以在贷款初期每期的还款中，利息计息基数较大，利息较多，剔除利息后，所还的贷款本金就较少，而在贷款末期，随着剩余贷款本金的逐渐减少，末期每期利息也相对减少，所还贷款本金就相对增加。等额本息是住房贷款的两种常见还款方式之一，其贷款计算公式如下：
 
-$$每期偿还金额 = \frac{贷款本金\times月利率\times(1+月利率)^{借款期数}}{(1+月利率)^{借款期数}-1}$$
+<img src="等额本息.assets/image-20240229151634381.png" alt="image-20240229151634381" style="zoom:80%;" />
 
 在贷款领域中，一般都是使用年利率展示，然后通过年利率换算月利率，套用贷款计算公式，算出每期偿还金额，举个例子：
 
@@ -12,11 +12,11 @@ $$每期偿还金额 = \frac{贷款本金\times月利率\times(1+月利率)^{借
 
 可以看到，上面的月还款利息直接通过月利率计算，实际是将每个月当做了30天来算出每月还款利息，但很多贷款产品是需要计算每期的占用天数的，以满足法规要求和提高计划的精确性，可以说是按日计息。因此在实际计算每期还款利息的时候使用日利率，月利率则使用日利率按30天换算，具体计算方式如下：
 
-$$每期还款利息 = 剩余应还本金 \times 日利率 \times 每期占用天数\\月利率 = 日利率 \times 30\\或者月利率 = 年利率 ÷ 12$$
+<img src="等额本息.assets/image-20240229151740921.png" alt="image-20240229151740921" style="zoom:80%;" />
 
 这种做法也是为了方便计算和表达，在金融行业中比较常见。这样的计算方式还需要注意一些细节。通常，从年利率到日利率的转换是通过除以年份的天数（通常取365天）来完成的，因为一年通常被视为365天。这样的转换是一种近似，而不是准确的数学计算。具体计算方式如下：
 
-$$日利率=年利率 ÷ 365$$
+<img src="等额本息.assets/image-20240229151822474.png" alt="image-20240229151822474" style="zoom:80%;" />
 
 > 注意：月利率 = 日利率 * 30 = 年利率 ÷ 365 * 30 跟 月利率 = 年利率 ÷ 12 的差异 ，后者直接是将一年作为了360天算。
 
